# cmspp

./: .gitignore  CMakeLists.txt  LICENSE  ai.cpp  ai.h  board.cpp  board.h  boardconfigview.cpp  boardconfigview.h  boardconfigview.ui  boardgenerationprogress.cpp  boardgenerationprogress.h  boardgenerationprogress.ui  boardview.cpp  boardview.h  caneminesweeper.pro  guimain.cpp  guimain.h  main.cpp  mainwindow.ui
